# gpu_backtester

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt
examples/: compare_with_backtesting.py  donchan_breakout.py  donchan_breakout_opt.py
gpu_backtester/: __init__.py
gpu_backtester/backtest/: __init__.py  optimize.py  performance.py
gpu_backtester/indicators/: __init__.py  momentum.py  volatility.py
gpu_backtester/tools/: tools.py
indicators/: momentum.py  overlap.py
